# reddit-rag-analytics-pipeline

./: .gitignore  README.md  main.py  pyproject.toml
dbt/: dbt_project.yml
dbt/models/marts/: fct_posts.sql  schema.yml
dbt/models/staging/: schema.yml  stg_comments.sql  stg_posts.sql
docs/: ARCHITECTURE.md
notebooks/: raw_data_analysis.ipynb
src/embeddings/: chunker.py  embedder.py
src/ingestion/: comment_fetcher.py  reddits_raw_ingest.py  watermark.py
src/processing/: processing_temp.ipynb  reddit_spark_transform.py  snowflake_loader.py
src/utils/: config.py  logger.py  snowflake_client.py
